# fg-clustering

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README.rst  create_toy_dataset.ipynb  pyproject.toml  setup.py  synthetic_ds_testing.py  test.ipynb  tutorial.ipynb
.github/scripts/: ci_python_versions.py
.github/workflows/: pytest_fgc.yml  release.yml  releasing.yml  test.yml  testing.yml
data/: create_synthetic_datasets.ipynb  create_toy_dataset.ipynb  data_breast_cancer.csv  data_make_classif_1.csv  data_make_classif_2.csv  data_penguins.csv  random_forest_boston.joblib  random_forest_breat_cancer.joblib  random_forest_make_classif_1.joblib  random_forest_make_classif_2.joblib  random_forest_penguins.joblib
docs/: requirements.txt
docs/source/: basicusage.rst  conf.py  feature_importance.rst  fgclustering.rst  general_algorithm  general_algorithm.rst  index.rst  introduction.rst  modules.rst  tutorial.ipynb
docs/source/_getting_started/: basic_usage.rst  installation.rst
docs/source/_theoretical_background/: feature_importance.rst  general_algorithm.rst  introduction.rst  refs.bib
docs/source/_tutorials/: big_data_with_FGC.nblink  comparing_FGC_to_feature_importance.nblink  impact_of_model_complexity_on_FGC.nblink  inference_with_FGC.nblink  introduction_to_FGC.nblink  introduction_to_FGC_comparing_FGC_to_FI.nblink  introduction_to_FGC_use_cases.nblink  special_case_big_data_with_FGC.nblink  special_case_impact_of_model_complexity_on_FGC.nblink  special_case_inference_with_FGC.nblink
fgclustering/: __init__.py  _version.py  clustering.py  distance.py  forest_guided_clustering.py  optimizer.py  plotting.py  statistics.py  utils.py
publication/aml_case_study/: 1_AML_exploratory_data_analysis.ipynb  2_AML_classifier.ipynb  3_Leukemia_exploratory_data_analysis.ipynb  utils.py
publication/aml_case_study/data/: AML_data_1_info.csv  AML_data_2_info.csv  rf_case1.pickle
publication/benchmark/: simulated_data.ipynb  simulated_data_method_comparison.ipynb  simulated_data_unsupervised_randomForest.R
publication/profiling_runtime_memory/: profiling.ipynb  profiling.py
publication/profiling_runtime_memory/results_cluster_approaches/: profiling_memory.csv
publication/profiling_runtime_memory/results_cluster_methods/: profiling_runtime.csv
publication/profiling_runtime_memory/results_distancematrix/: profiling_memory.csv  profiling_runtime.csv
publication/runtime_and_memory_profiling_of_proximity_based_clustering/results_cluster_approaches/: profiling_runtime.csv
publication/runtime_and_memory_profiling_of_proximity_based_clustering/results_cluster_methods/: profiling_memory.csv
src/: clustering.py  forest_guided_clustering.py  interpret_rf.py  optimizer.py  plotting.ipynb  plotting.py  statistics.py  utils.py
test/: create_toy_dataset.ipynb  integration_tests.ipynb  random_forest_breat_cancer.joblib  random_forest_iris.joblib  test_clustering.py  test_distance.py  test_forest_guided_clustering.py  test_optimizer.py  test_plotting.py  test_proximity.R  test_statistics.py  test_synthetic_ds.py  test_utils.py
tutorials/: big_data_with_FGC.ipynb  comparing_FGC_to_feature_importance.ipynb  impact_of_model_complexity_on_FGC.ipynb  inference_with_FGC.ipynb  introduction_to_FGC.ipynb  introduction_to_FGC_comparing_FGC_to_FI.ipynb  introduction_to_FGC_use_cases.ipynb  special_case_big_data_with_FGC.ipynb  special_case_impact_of_model_complexity_on_FGC.ipynb  special_case_inference_with_FGC.ipynb
tutorials/utils/: utils.py
