[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fgclustering"]

[tool.setuptools.dynamic]
readme = { file = "README.md" }

[tool.setuptools_scm]
write_to = "fgclustering/_version.py"

[project]
name = "fgclustering"
dynamic = ["version"]
description = "Forest-Guided Clustering: Explainability method for Random Forest models."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
authors = [
  { name = "Lisa Barros de Andrade e Sousa", email = "lisa.barros.andrade.sousa@gmail.com" },
  { name = "Dominik Thalmeier" },
  { name = "Helena Pelin", email = "helena.pelin@helmholtz-muenchen.de" },
  { name = "Marie Piraud", email = "marie.piraud@helmholtz-muenchen.de" },
]
maintainers = [
  { name = "Lisa Barros de Andrade e Sousa", email = "lisa.barros.andrade.sousa@gmail.com" },
]
keywords = [
  "random forest",
  "xai",
  "explainable ai",
  "forest-guided clustering",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.6",
  "seaborn>=0.12",
  "scikit-learn>=1.2",
  "scipy>=1.9",
  "numba>=0.57",
  "tqdm>=4.65",
  "kmedoids>=0.4",
  "statsmodels>=0.13.5",
  "numexpr>=2.8.4",
  "imbalanced-learn>=0.11",
  "plotly>=5.15",
  "nbformat>=5.7",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff", "black", "mypy"]

[project.urls]
documentation = "https://forest-guided-clustering.readthedocs.io/en/latest/"
repository = "https://github.com/HelmholtzAI-Consultants-Munich/fg-clustering"
